app/globals.scss
/* styles/globals.scss */

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --color-bg1: rgb(129, 183, 255);
  --color-bg2: rgb(43, 57, 255);
  --color1: 255, 255, 255;
  --color2: 189, 52, 235;
  --color3: 52, 211, 235;
  --color4: 52, 235, 128;
  --color5: 223, 235, 52;
  --color-interactive: 255, 255, 255;
  --circle-size: 80%;
  --blending: hard-light;
}

@layer base {
  body {
    @apply font-primary leading-loose;
    cursor: none;
  }
}

// Custome cursor
#circularcursor {
  background-color: transparent;
  border: 1.5px solid rgb(95, 95, 95);
  height: 25px;
  width: 25px;
  border-radius: 50%;
  position: fixed; /* Use fixed for accurate positioning */
  z-index: 10000; /* Ensure it's above other elements */
  pointer-events: none; /* Prevent it from blocking clicks */
  transform: translate(-50%, -50%); /* Adjust for positioning */
  mix-blend-mode: difference; /* Blend with the background to avoid covering */
}

/* Apply cursor:none to all clickable elements */
a,
button,
input,
[role="button"] {
  cursor: none; /* Hide the native cursor */
}

@keyframes moveInCircle {
  0% {
    transform: rotate(0deg);
  }
  50% {
    transform: rotate(180deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

@keyframes moveVertical {
  0% {
    transform: translateY(-50%);
  }
  50% {
    transform: translateY(50%);
  }
  100% {
    transform: translateY(-50%);
  }
}

@keyframes moveHorizontal {
  0% {
    transform: translateX(-10%);
  }
  50% {
    transform: translateX(10%);
  }
  100% {
    transform: translateX(-10%);
  }
}

.gradient-bg {
  width: 100vw;
  height: 100vh;
  position: absolute;
  overflow: hidden;
  background: linear-gradient(40deg, var(--color-bg1), var(--color-bg2));
  top: 0;
  left: 0;
  z-index: -1;
}

svg {
  display: none;
}

.gradients-container {
  filter: url(#goo) blur(40px);
  width: 100%;
  height: 100%;
}

.g1 {
  position: absolute;
  background: radial-gradient(
      rgba(var(--color1), 0.8) 0,
      rgba(var(--color1), 0) 50%
    )
    no-repeat;

  mix-blend-mode: var(--blending);

  width: 1000px;
  height: 1000px;
  top: calc(50% - var(--circle-size) / 2);
  left: calc(70% - var(--circle-size) / 2);
  z-index: -1;

  transform-origin: center center;
  animation: moveVertical 30s ease infinite;

  opacity: 1;
}

.g2 {
  position: absolute;
  background: radial-gradient(
      rgba(var(--color2), 0.8) 0,
      rgba(var(--color2), 0) 50%
    )
    no-repeat;
  mix-blend-mode: var(--blending);

  width: 1000px;
  height: 1000px;
  top: calc(50% - var(--circle-size) / 2);
  left: calc(85% - var(--circle-size) / 2);
  z-index: -1;

  transform-origin: calc(50% - 400px);
  animation: moveInCircle 30s reverse infinite;

  opacity: 1;
}
.g3 {
  position: absolute;
  background: radial-gradient(
      rgba(var(--color3), 0.8) 0,
      rgba(var(--color3), 0) 50%
    )
    no-repeat;
  mix-blend-mode: var(--blending);

  width: 1000px;
  height: 1000px;
  top: calc(50% - var(--circle-size) / 2 + 200px);
  left: calc(90% - var(--circle-size) / 2 - 500px);
  z-index: -1;

  transform-origin: calc(50% + 400px);
  animation: moveInCircle 40s linear infinite;

  opacity: 1;
}
.g4 {
  position: absolute;
  background: radial-gradient(
      rgba(var(--color4), 0.8) 0,
      rgba(var(--color4), 0) 50%
    )
    no-repeat;
  mix-blend-mode: var(--blending);

  width: 1000px;
  height: 1000px;
  top: calc(50% - var(--circle-size) / 2);
  left: calc(70% - var(--circle-size) / 2);
  z-index: -1;

  transform-origin: calc(50% - 200px);
  animation: moveHorizontal 40s ease infinite;

  opacity: 1;
}
.g5 {
  position: absolute;
  background: radial-gradient(
      rgba(var(--color5), 0.8) 0,
      rgba(var(--color5), 0) 50%
    )
    no-repeat;
  mix-blend-mode: var(--blending);

  width: 1000px;
  height: 1000px;
  top: calc(50% - var(--circle-size));
  left: calc(70% - var(--circle-size));
  z-index: -1;

  transform-origin: calc(50% - 800px) calc(50% + 200px);
  animation: moveInCircle 40s ease infinite;

  opacity: 1;
}

.interactive {
  position: absolute;
  background: radial-gradient(
      rgba(var(--color-interactive), 0.8) 0,
      rgba(var(--color-interactive), 0) 50%
    )
    no-repeat;
  mix-blend-mode: var(--blending);

  width: 800px;
  height: 800px;
  top: -400px;
  left: -400px;
  z-index: -1;

  opacity: 0.7;
}

.social-link-container {
  position: fixed;
  bottom: 70px;
  right: -100px;
  flex-direction: column;
  align-items: center;
  display: flex;
  float: right;
  padding-left: 800px;

  gap: 1rem;
}

.social-logo {
  transition: transform 0.2s ease-in-out;
}

.social-logo:hover {
  transform: scale(1.2);
}

body {
  transition-property: opacity, filter;
  transition-timing-function: ease-in-out;
  transition-duration: 600ms;
  background-color: black;
}

.page-transition {
  opacity: 0;
  background: black;
  filter: blur(12px);
}

